// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

option go_package = "internal/pb;pb";

message ExposureKeyExport {
	// Time window of keys in this file based on arrival to server, in UTC
	optional fixed64 startTimestamp = 1;
	optional fixed64 endTimestamp = 2;
	// Region for which these keys came from (e.g., country)
	optional string region = 3;
	// E.g., Batch 2 of 10
	optional int32 batchNum = 4;
	optional int32 batchSize = 5;

	// Packed bytes of repeated exposure keys
	optional bytes exposureKeys = 6; // number of keys = length / 16 bytes per key
	// Array of single byte ints of transmission risks, with indexes corresponding to keys
	optional bytes transmissionRisks = 7;
	// Arrays of two byte ints (little endian) for interval and rolling period
	optional bytes intervalNumbers = 8;
	optional bytes rollingPeriods = 9;
}
